--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno Desarrollo
-configuracion.autor.name=Pedro Javier
-configuracion.autor.email=pedroJPM@gmail.com
+configuracion.autor.name=Pedro Javier Perez
+configuracion.autor.email=pedroJavierPM@gmail.com
