--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 config.security.oauth.cliente.id=frontendapp
 config.security.oauth.cliente.secret=12345
-config.security.oauth.jwt.key=codigo_secreto
+config.security.oauth.jwt.key=codigo_secreto1234567890987654321
